--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "aos": "^2.3.4",
     "faker": "^4.1.0",
     "gsap": "^3.0.5",
     "jquery": "^3.4.1",
